tests/baselines/reference/illegalSuperCallsInConstructor.errors.txt
==== tests/cases/compiler/illegalSuperCallsInConstructor.ts (8 errors) ====
    class Base {
        x: string;
    }
     
    class Derived extends Base {
        constructor() {
        ~~~~~~~~~~~~~~~
            var r2 = () => super();
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                           ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors
            var r3 = () => { super(); }
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                             ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors
            var r4 = function () { super(); }
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                   ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors
            var r5 = {
    ~~~~~~~~~~~~~~~~~~
                get foo() {
                    ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    ~~~~~~~~~~~~~~~~~~~~~~~
                    super();
    ~~~~~~~~~~~~~~~~~~~~~~~~
                    ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors
                    return 1;
    ~~~~~~~~~~~~~~~~~~~~~~~~~
                },
    ~~~~~~~~~~~~~~
                set foo(v: number) {
                    ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                    super();
    ~~~~~~~~~~~~~~~~~~~~~~~~
                    ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors
                }
    ~~~~~~~~~~~~~
            }
    ~~~~~~~~~
        }
    ~~~~~
!!! error TS2377: Constructors for derived classes must contain a 'super' call.
    }